# Coding_Templates

./: Articulation Point.cpp  BFS.cpp  Bellman Ford Algo.cpp  Binary Search for monotonous search.cpp  Bridge.cpp  CMakeLists.txt  DFS.cpp  DSU.cpp  Dijkstra's Algo.cpp  Fenwick Tree.cpp  Floyd Warshall.cpp  GE digital.cpp  Heap.cpp  Hello World.cpp  Kahn's Algorithm.cpp  Kruskal's Algorithm.cpp  Lower_Upper bound.cpp  N Queens.cpp  Prim's Algo.cpp  SCC(Kosaraju's Algo).cpp  Shortest path in unweighted graph.cpp  Sliding Window.cpp  Sudoku solver.cpp  Trie.cpp  bst number.cpp
Array/: Lazy Propagation.cpp  Range Minimum.cpp  Range_update.cpp  Segment Tree.cpp
Graphs/: 0-1 BFS.cpp
OA/: Main.cpp  Main.h  Navi-Brock and Stock.cpp  Shapes.cpp  Shapes.h  check.cpp  check2.cpp
OA/Amazon/: 10 oct_Move coins in tree.cpp  Alexa temp change.cpp  Amazon prime games.cpp  Intern Stock price review.cpp  Keypad.cpp  Max Observable stock sum.cpp  Package Shipping.cpp  Pascal Encryption.cpp  Prime video Sub.cpp  Word search subsequence.cpp  substring score.cpp
OA/BNY Mellon/: Portfolio backtesting.cpp  Process Scheduler.cpp  Purchase Optimization.cpp  Pythagorean triplet.cpp
OA/Blend 360/: Prime permutation.cpp
OA/Flipkart/: Footwear warehouse.cpp
OA/Intel/: Calculator.cpp  Replace X by M.cpp
OA/Kore.ai/: separate the number.cpp  smallest common substring.cpp  (+2 more)
Sorting/: Merge Sort.cpp  Quick Sort.cpp
Stack/: Stack using array.cpp
String Matching/: KMP Algorithm.cpp  Manachers algorithm.cpp  Rabin Karp.cpp  Z-Algorithm.cpp  string stream.cpp
Trees/: Morris Traversal.cpp
(+19 files in other folders)
