cmake_minimum_required(VERSION 3.22)
project(Coding_Templates)

set(CMAKE_CXX_STANDARD 14)

add_executable(Coding_Templates OA/Oracle/Vowel.cpp OA/Samsung/Wormhole.cpp "OA/Samsung/Aggresive Cows.cpp" "OA/Samsung/Burst Balloons.cpp" OA/Samsung/TSP.cpp "OA/Samsung/Bomb explosion.cpp" "OA/Samsung/Maze .cpp" OA/Samsung/Endoscopy.cpp)
